# gitgraph_zed

./: .gitignore  Cargo.toml  LICENSE  README.md
.zed/: tasks.json
crates/gitgraph-cli/: Cargo.toml
crates/gitgraph-cli/src/: main.rs  tui.rs
crates/gitgraph-core/: Cargo.toml
crates/gitgraph-core/src/: error.rs  git.rs  models.rs  search.rs  state.rs
crates/gitgraph-core/tests/: perf_large_repos.rs
crates/gitgraph-zed/: Cargo.toml  extension.toml
crates/gitgraph-zed/src/: lib.rs
crates/gitlg-cli/: Cargo.toml
crates/gitlg-cli/src/: main.rs  tui.rs
crates/gitlg-core/: Cargo.toml
crates/gitlg-core/src/: actions.rs  lib.rs  log_parser.rs  search.rs  service.rs  state.rs
crates/gitlg-core/tests/: perf_large_repos.rs
crates/gitlg-zed/: Cargo.toml  extension.toml
crates/gitlg-zed/src/: lib.rs
docs/: feature-mapping.md
