[workspace]
resolver = "2"
members = [
    "crates/gitlg-core",
    "crates/gitlg-cli",
    "crates/gitlg-zed",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-openai = { version = "0.32.4", default-features = false, features = ["rustls", "responses"] }
clap = { version = "4.5.53", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.29.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shlex = "1.3.0"
thiserror = "2.0.17"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["rt"] }
tokio-stream = "0.1.18"
toml = "0.9.8"
