[workspace]
resolver = "2"
members = [
    "crates/gitgraph-core",
    "crates/gitgraph-cli",
    "crates/gitgraph-zed",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.101"
async-openai = { version = "0.32.4", default-features = false, features = ["rustls", "responses"] }
clap = { version = "4.5.59", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
ratatui = "0.30.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shlex = "1.3.0"
thiserror = "2.0.18"
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["rt"] }
tokio-stream = "0.1.18"
toml = "1.0.2"
