[package]
name = "gitgraph-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GitGraph terminal app (TUI + CLI) with commit description generation"
repository = "https://github.com/dwnmf/gitgraph_zed"
default-run = "gitgraph"
autobins = false

[[bin]]
name = "gitgraph"
path = "src/main.rs"

[[bin]]
name = "gitzed"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-openai.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
gitgraph-core = { path = "../gitgraph-core", version = "0.1.0" }
