[package]
name = "gitgraph-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for GitGraph: git graph parsing, search, actions, and state"
repository = "https://github.com/dwnmf/gitgraph_zed"

[dependencies]
directories.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
