[package]
name = "gitlg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "gitgraph"
autobins = false

[[bin]]
name = "gitgraph"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-openai.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
toml.workspace = true
gitlg-core = { path = "../gitlg-core" }
