[package]
name = "gitlg-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
directories.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
shlex.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
